--- a/Joandora/style.css
+++ b/Joandora/style.css
@@ -7,7 +7,7 @@ body { background-image: linear-gradient(180deg, skyblue, #fff 50%) !important; 
 .N_wrap { width: 960px; margin: 20px auto; font-family: Arial, Helvetica, sans-serif; position: relative; border: 1px solid #fff; box-sizing: border-box; }
 
 /*header*/
-header { height: 280px; background-image: url("../Joandora/image/bg.png"); }
+header { height: 280px; background-image: url("image/bg.png"); }
 header .logo { color: #ff0; box-sizing: border-box; padding: 35px 20px; font-size: 5em; text-shadow: 1px 1px 0px rgba(0,0,0); }
 
 nav.gnb { width: 100%; height: 60px; background: rgb(0, 102, 0); }
@@ -56,5 +56,4 @@ footer >* { color: #fff; padding: 10px; }
     #main .sidebar { width: 100%; flex-direction: column; }
     #main .sidebar img { margin: 0.5em; }
 
-    
 }
